cmake_minimum_required(VERSION 3.24)
project(LuoGuCPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(B2002 B2002.cpp)
add_executable(B2003 B2003.cpp)
add_executable(B2004 B2004.cpp)
add_executable(B2005 B2005.cpp)
add_executable(B2006 B2006.cpp)
add_executable(B2007 B2007.cpp)
add_executable(B2008 B2008.cpp)
add_executable(B2009 B2009.cpp)
add_executable(B2010 B2010.cpp)
add_executable(B2012 B2012.cpp)
add_executable(B2013 B2013.cpp)
add_executable(B2014 B2014.cpp)
add_executable(B2015 B2015.cpp)
add_executable(B2016 B2016.cpp)
add_executable(B2017 B2017.cpp)
add_executable(B2018 B2018.cpp)
add_executable(B2019 B2019.cpp)
add_executable(B2020 B2020.cpp)
add_executable(B2021 B2021.cpp)
add_executable(B2022 B2022.cpp)
add_executable(B2023 B2023.cpp)
add_executable(B2024 B2024.cpp)
add_executable(B2025 B2025.cpp)
add_executable(B2026 B2026.cpp)
add_executable(B2027 B2027.cpp)
add_executable(B2028 B2028.cpp)
add_executable(B2029 B2029.cpp)
add_executable(B2030 B2030.cpp)
add_executable(B2031 B2031.cpp)
add_executable(B2032 B2032.cpp)
add_executable(B2033 B2033.cpp)
add_executable(B2034 B2034.cpp)
add_executable(B2035 B2035.cpp)
add_executable(B2036 B2036.cpp)
add_executable(B2037 B2037.cpp)
add_executable(B2038 B2038.cpp)
add_executable(B2039 B2039.cpp)
add_executable(B2040 B2040.cpp)
add_executable(B2041 B2041.cpp)
add_executable(B2042 B2042.cpp)
add_executable(B2043 B2043.cpp)
add_executable(B2044 B2044.cpp)
add_executable(B2045 B2045.cpp)
add_executable(B2046 B2046.cpp)
add_executable(B2047 B2047.cpp)
add_executable(B2048 B2048.cpp)
add_executable(B2049 B2049.cpp)
add_executable(B2050 B2050.cpp)
add_executable(B2051 B2051.cpp)
add_executable(B2052 B2052.cpp)
add_executable(B2053 B2053.cpp)
add_executable(B2054 B2054.cpp)
add_executable(B2055 B2055.cpp)
add_executable(B2056 B2056.cpp)
add_executable(B2057 B2057.cpp)
add_executable(B2058 B2058.cpp)
add_executable(B2059 B2059.cpp)
add_executable(B2060 B2060.cpp)
add_executable(B2061 B2061.cpp)
add_executable(B2062 B2062.cpp)
add_executable(B2063 B2063.cpp)
add_executable(B2064 B2064.cpp)
add_executable(B2065 B2065.cpp)
add_executable(B2066 B2066.cpp)
add_executable(B2067 B2067.cpp)
add_executable(B2068 B2068.cpp)
add_executable(B2069 B2069.cpp)
add_executable(B2070 B2070.cpp)
add_executable(B2071 B2071.cpp)
add_executable(B2072 B2072.cpp)
add_executable(B2073 B2073.cpp)
add_executable(B2074 B2074.cpp)
add_executable(B2075 B2075.cpp)
add_executable(B2076 B2076.cpp)
add_executable(B2077 B2077.cpp)
add_executable(B2078 B2078.cpp)
add_executable(B2079 B2079.cpp)
add_executable(B2080 B2080.cpp)
add_executable(B2081 B2081.cpp)
add_executable(B2082 B2082.cpp)
add_executable(B2083 B2083.cpp)
add_executable(B2084 B2084.cpp)
add_executable(B2085 B2085.cpp)
add_executable(B2086 B2086.cpp)
add_executable(B2087 B2087.cpp)
add_executable(B2088 B2088.cpp)
add_executable(B2089 B2089.cpp)
add_executable(B2090 B2090.cpp)
add_executable(B2091 B2091.cpp)
add_executable(B2092 B2092.cpp)
add_executable(B2093 B2093.cpp)
add_executable(B2094 B2094.cpp)
add_executable(B2095 B2095.cpp)
add_executable(B2096 B2096.cpp)
add_executable(B2097 B2097.cpp)
add_executable(B2098 B2098.cpp)
add_executable(B2099 B2099.cpp)
add_executable(B2100 B2100.cpp)
add_executable(B2101 B2101.cpp)
add_executable(B2102 B2102.cpp)
add_executable(B2103 B2103.cpp)
add_executable(B2104 B2104.cpp)
add_executable(B2105 B2105.cpp)
add_executable(B2106 B2106.cpp)
add_executable(B2107 B2107.cpp)
add_executable(B2108 B2108.cpp)
add_executable(B2109 B2109.cpp)
add_executable(B2110 B2110.cpp)