cmake_minimum_required(VERSION 3.24)
project(LuoGuCPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(B2002 B2002.cpp)
add_executable(B2003 B2003.cpp)
add_executable(B2004 B2004.cpp)
add_executable(B2005 B2005.cpp)
add_executable(B2006 B2006.cpp)
add_executable(B2007 B2007.cpp)
add_executable(B2008 B2008.cpp)
add_executable(B2009 B2009.cpp)
add_executable(B2010 B2010.cpp)
add_executable(B2012 B2012.cpp)
add_executable(B2013 B2013.cpp)
add_executable(B2014 B2014.cpp)
add_executable(B2015 B2015.cpp)
add_executable(B2016 B2016.cpp)
add_executable(B2017 B2017.cpp)
add_executable(B2018 B2018.cpp)
add_executable(B2019 B2019.cpp)
add_executable(B2020 B2020.cpp)
add_executable(B2021 B2021.cpp)
add_executable(B2022 B2022.cpp)
add_executable(B2023 B2023.cpp)
add_executable(B2024 B2024.cpp)
add_executable(B2025 B2025.cpp)
add_executable(B2026 B2026.cpp)
add_executable(B2027 B2027.cpp)
add_executable(B2028 B2028.cpp)
add_executable(B2029 B2029.cpp)
add_executable(B2030 B2030.cpp)
add_executable(B2031 B2031.cpp)
add_executable(B2032 B2032.cpp)
add_executable(B2033 B2033.cpp)
add_executable(B2034 B2034.cpp)
add_executable(B2035 B2035.cpp)
add_executable(B2036 B2036.cpp)
add_executable(B2037 B2037.cpp)
add_executable(B2038 B2038.cpp)
add_executable(B2039 B2039.cpp)
add_executable(B2040 B2040.cpp)
add_executable(B2041 B2041.cpp)
add_executable(B2042 B2042.cpp)
add_executable(B2043 B2043.cpp)
add_executable(B2044 B2044.cpp)
add_executable(B2045 B2045.cpp)
add_executable(B2046 B2046.cpp)
add_executable(B2047 B2047.cpp)
add_executable(B2048 B2048.cpp)
add_executable(B2049 B2049.cpp)
add_executable(B2050 B2050.cpp)
add_executable(B2051 B2051.cpp)
add_executable(B2052 B2052.cpp)
add_executable(B2053 B2053.cpp)
add_executable(B2054 B2054.cpp)
add_executable(B2055 B2055.cpp)
add_executable(B2056 B2056.cpp)
add_executable(B2057 B2057.cpp)
add_executable(B2058 B2058.cpp)
add_executable(B2059 B2059.cpp)
add_executable(B2060 B2060.cpp)
add_executable(B2061 B2061.cpp)
add_executable(B2062 B2062.cpp)
add_executable(B2063 B2063.cpp)
add_executable(B2064 B2064.cpp)
add_executable(B2065 B2065.cpp)
add_executable(B2066 B2066.cpp)
add_executable(B2067 B2067.cpp)
add_executable(B2068 B2068.cpp)
add_executable(B2069 B2069.cpp)
add_executable(B2070 B2070.cpp)
add_executable(B2071 B2071.cpp)
add_executable(B2072 B2072.cpp)
add_executable(B2073 B2073.cpp)
add_executable(B2074 B2074.cpp)
add_executable(B2075 B2075.cpp)
add_executable(B2076 B2076.cpp)
add_executable(B2077 B2077.cpp)
add_executable(B2078 B2078.cpp)
add_executable(B2079 B2079.cpp)
add_executable(B2080 B2080.cpp)
add_executable(B2081 B2081.cpp)
add_executable(B2082 B2082.cpp)
add_executable(B2083 B2083.cpp)
add_executable(B2084 B2084.cpp)
add_executable(B2085 B2085.cpp)
add_executable(B2086 B2086.cpp)
add_executable(B2087 B2087.cpp)
add_executable(B2088 B2088.cpp)
add_executable(B2089 B2089.cpp)
add_executable(B2090 B2090.cpp)
add_executable(B2091 B2091.cpp)
add_executable(B2092 B2092.cpp)
add_executable(B2093 B2093.cpp)
add_executable(B2094 B2094.cpp)
add_executable(B2095 B2095.cpp)
add_executable(B2096 B2096.cpp)
add_executable(B2097 B2097.cpp)
add_executable(B2098 B2098.cpp)
add_executable(B2099 B2099.cpp)
add_executable(B2100 B2100.cpp)
add_executable(B2101 B2101.cpp)
add_executable(B2102 B2102.cpp)
add_executable(B2103 B2103.cpp)
add_executable(B2104 B2104.cpp)
add_executable(B2105 B2105.cpp)
add_executable(B2106 B2106.cpp)
add_executable(B2107 B2107.cpp)
add_executable(B2108 B2108.cpp)
add_executable(B2109 B2109.cpp)
add_executable(B2110 B2110.cpp)
add_executable(P1000 P1000.cpp)
add_executable(P1001 P1001.cpp)
add_executable(P5703 P5703.cpp)
add_executable(P5704 P5704.cpp)
add_executable(P5705 P5705.cpp)
add_executable(P5706 P5706.cpp)
add_executable(P5707 P5707.cpp)
add_executable(P5708 P5708.cpp)
add_executable(P1425 P1425.cpp)
add_executable(P1421 P1421.cpp)
add_executable(P3954 P3954.cpp)
add_executable(P2433 P2433.cpp)
add_executable(P5709 P5709.cpp)
add_executable(P5710 P5710.cpp)
add_executable(P5711 P5711.cpp)
add_executable(P5712 P5712.cpp)
add_executable(P5713 P5713.cpp)
add_executable(P5714 P5714.cpp)
add_executable(P5715 P5715.cpp)
add_executable(P5716 P5716.cpp)
add_executable(P1085 P1085.cpp)
add_executable(P1909 P1909.cpp)
add_executable(P5717 P5717.cpp)
add_executable(P1422 P1422.cpp)
add_executable(P1888 P1888.cpp)
add_executable(P1424 P1424.cpp)
add_executable(P1046 P1046.cpp)
add_executable(P4414 P4414.cpp)
add_executable(P1055 P1055.cpp)
add_executable(P5718 P5718.cpp)
add_executable(P5719 P5719.cpp)
add_executable(P5720 P5720.cpp)
add_executable(P5721 P5721.cpp)
add_executable(P1009 P1009.cpp)
add_executable(P1980 P1980.cpp)
add_executable(P1035 P1035.cpp)
add_executable(P2669 P2669.cpp)
add_executable(P5722 P5722.cpp)
add_executable(P5723 P5723.cpp)
add_executable(P1217 P1217.cpp)
add_executable(P1423 P1423.cpp)
add_executable(P1307 P1307.cpp)
add_executable(P1720 P1720.cpp)
add_executable(P5724 P5724.cpp)
add_executable(P1420 P1420.cpp)
add_executable(P1075 P1075.cpp)
add_executable(P5725 P5725.cpp)
add_executable(P5726 P5726.cpp)
add_executable(P4956 P4956.cpp)
add_executable(P1089 P1089.cpp)
add_executable(P1428 P1428.cpp)
add_executable(P1427 P1427.cpp)
add_executable(P5727 P5727.cpp)
add_executable(P1047 P1047.cpp)
add_executable(P5728 P5728.cpp)
add_executable(P5729 P5729.cpp)
add_executable(B2550 B2550.cpp)
add_executable(B2615 B2615.cpp)
add_executable(P5730 P5730.cpp)
add_executable(P1554 P1554.cpp)
add_executable(P2141 P2141.cpp)
add_executable(P1614 P1614.cpp)
add_executable(P2911 P2911.cpp)
add_executable(P1161 P1161.cpp)
add_executable(P5731 P5731.cpp)
add_executable(P5732 P5732.cpp)
add_executable(P1789 P1789.cpp)
add_executable(P1319 P1319.cpp)
add_executable(P1320 P1320.cpp)
add_executable(P1205 P1205.cpp)
add_executable(P5735 P5735.cpp)
add_executable(P5736 P5736.cpp)
add_executable(P5737 P5737.cpp)
add_executable(P5738 P5738.cpp)
add_executable(P5739 P5739.cpp)
add_executable(P5461 P5461.cpp)
add_executable(P5740 P5740.cpp)
add_executable(P5741 P5741.cpp)
add_executable(P5742 P5742.cpp)
add_executable(P1304 P1304.cpp)
add_executable(P2415 P2415.cpp)
add_executable(P5743 P5743.cpp)
add_executable(P5744 P5744.cpp)
add_executable(P5733 P5733.cpp)
add_executable(P1914 P1914.cpp)
add_executable(P1125 P1125.cpp)
add_executable(P1957 P1957.cpp)
add_executable(P5015 P5015.cpp)
add_executable(P5734 P5734.cpp)
add_executable(P1308 P1308.cpp)
add_executable(P1765 P1765.cpp)
add_executable(P3741 P3741.cpp)
add_executable(P1321 P1321.cpp)
add_executable(P1553 P1553.cpp)
add_executable(P1603 P1603.cpp)
add_executable(P1200 P1200.cpp)
add_executable(P1597 P1597.cpp)
add_executable(P1598 P1598.cpp)
add_executable(P1042 P1042.cpp)
add_executable(P2670 P2670.cpp)
add_executable(P1563 P1563.cpp)
add_executable(P1601 P1601.cpp)
add_executable(P1303 P1303.cpp)
add_executable(P4924 P4924.cpp)
add_executable(P1328 P1328.cpp)
add_executable(P1067 P1067.cpp)
add_executable(P1098 P1098.cpp)
add_executable(P1591 P1591.cpp)
add_executable(P1518 P1518.cpp)
add_executable(P1786 P1786.cpp)
add_executable(P1045 P1045.cpp)
add_executable(P1271 P1271.cpp)
add_executable(P1177 P1177.cpp)
add_executable(P1923 P1923.cpp)
add_executable(P1059 P1059.cpp)
add_executable(P1093 P1093.cpp)
add_executable(P2676 P2676.cpp)
add_executable(P1781 P1781.cpp)
add_executable(P1116 P1116.cpp)
add_executable(P1152 P1152.cpp)
add_executable(B2111 B2111.cpp)
add_executable(P1068 P1068.cpp)
add_executable(P5143 P5143.cpp)
add_executable(P1104 P1104.cpp)
add_executable(P1012 P1012.cpp)
add_executable(B2112 B2112.cpp)
add_executable(B2113 B2113.cpp)
add_executable(B2114 B2114.cpp)
add_executable(B2115 B2115.cpp)
add_executable(B2116 B2116.cpp)
add_executable(B2117 B2117.cpp)
add_executable(B2118 B2118.cpp)
add_executable(B2119 B2119.cpp)
add_executable(B2120 B2120.cpp)
add_executable(P2241 P2241.cpp)
add_executable(P2089 P2089.cpp)
add_executable(P1618 P1618.cpp)
add_executable(P1036 P1036.cpp)
add_executable(P1157 P1157.cpp)
add_executable(P1706 P1706.cpp)
add_executable(P1088 P1088.cpp)
add_executable(P3392 P3392.cpp)
add_executable(P3654 P3654.cpp)
add_executable(P3799 P3799.cpp)
add_executable(P1149 P1149.cpp)
add_executable(P2392 P2392.cpp)
add_executable(P2036 P2036.cpp)
add_executable(P1255 P1255.cpp)
add_executable(P1002 P1002.cpp)
add_executable(P1044 P1044.cpp)
add_executable(P1028 P1028.cpp)
add_executable(P1464 P1464.cpp)
add_executable(B2121 B2121.cpp)
add_executable(P1928 P1928.cpp)
add_executable(P2437 P2437.cpp)
add_executable(B2122 B2122.cpp)
add_executable(B2123 B2123.cpp)
add_executable(B2124 B2124.cpp)
add_executable(B2125 B2125.cpp)
add_executable(B2126 B2126.cpp)
add_executable(B2127 B2127.cpp)
add_executable(P1164 P1164.cpp)
add_executable(B2128 B2128.cpp)
add_executable(B2129 B2129.cpp)
add_executable(B2130 B2130.cpp)
add_executable(P1990 P1990.cpp)
add_executable(P2249 P2249.cpp)
add_executable(B2131 B2131.cpp)
add_executable(B2132 B2132.cpp)
add_executable(B2133 B2133.cpp)
add_executable(B2134 B2134.cpp)
add_executable(B2135 B2135.cpp)